fix: img fix attempt + copyright text align center

--- a/index.css
+++ b/index.css
@@ -122,3 +122,7 @@ nav {
 p {
     text-align: justify;
 }
+
+.copyright {
+    text-align: center;
+}
